[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/UI/Book/Book.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/Book/Pages/page_icon.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/Book/Pages/2.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/Book/Pages/3.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/Book/Pages/locked_page.png" type="Texture" id=5]
[ext_resource path="res://Project/UI/Screens/BookMenu/BookMenu.gd" type="Script" id=6]
[ext_resource path="res://Assets/UI/Book/Pages/1.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]
resource_name = "appear"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("MainMarginContainer/ColorRect:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.0823529, 0.0823529, 0.0823529, 0 ), Color( 0.0823529, 0.0823529, 0.0823529, 0.309804 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainMarginContainer/BookMarginContainer:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.08, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -200 ), Vector2( 0, -10 ), Vector2( 0, 0 ) ]
}

[node name="BookMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 6 )
all_pages = [ ExtResource( 7 ), ExtResource( 3 ), ExtResource( 4 ) ]
lockerd_page = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "appear"
anims/appear = SubResource( 1 )

[node name="MainMarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MainMarginContainer"]
margin_right = 512.0
margin_bottom = 290.0
color = Color( 0.0823529, 0.0823529, 0.0823529, 0.309804 )

[node name="BookMarginContainer" type="MarginContainer" parent="MainMarginContainer"]
margin_right = 512.0
margin_bottom = 290.0
custom_constants/margin_right = 20
custom_constants/margin_top = 10
custom_constants/margin_left = 20
custom_constants/margin_bottom = 10

[node name="BookContainer" type="PanelContainer" parent="MainMarginContainer/BookMarginContainer"]
margin_left = 75.0
margin_top = 42.0
margin_right = 436.0
margin_bottom = 248.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MainMarginContainer/BookMarginContainer/BookContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 354.0
margin_bottom = 199.0

[node name="LeftArrow" type="Button" parent="MainMarginContainer/BookMarginContainer/BookContainer/HBoxContainer"]
margin_top = 86.0
margin_right = 25.0
margin_bottom = 106.0
size_flags_vertical = 4
text = "<-"

[node name="Pages" type="TextureRect" parent="MainMarginContainer/BookMarginContainer/BookContainer/HBoxContainer"]
margin_left = 29.0
margin_right = 318.0
margin_bottom = 192.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightArrow" type="Button" parent="MainMarginContainer/BookMarginContainer/BookContainer/HBoxContainer"]
margin_left = 322.0
margin_top = 86.0
margin_right = 347.0
margin_bottom = 106.0
size_flags_vertical = 4
text = "->"

[node name="GeneralMarginContainer" type="MarginContainer" parent="MainMarginContainer"]
margin_right = 512.0
margin_bottom = 290.0
custom_constants/margin_right = 20
custom_constants/margin_top = 10
custom_constants/margin_left = 20
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" type="Button" parent="MainMarginContainer/GeneralMarginContainer"]
margin_left = 438.0
margin_top = 260.0
margin_right = 492.0
margin_bottom = 280.0
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Cancel"

[node name="ProgressBar" type="MarginContainer" parent="MainMarginContainer"]
visible = false
margin_right = 512.0
margin_bottom = 290.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="MainMarginContainer/ProgressBar"]
visible = false
margin_right = 512.0
margin_bottom = 290.0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="MainMarginContainer/ProgressBar"]
margin_right = 512.0
margin_bottom = 14.0
size_flags_vertical = 2

[node name="ItemList" type="ItemList" parent="MainMarginContainer/ProgressBar/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 473.0
margin_bottom = 7.0
rect_clip_content = false
items = [ "Item 0", ExtResource( 2 ), false, "Item 1", ExtResource( 2 ), false ]
